# kube-ops-view

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
app/: package-lock.json  package.json
chart/: Chart.yaml
helm/templates/: deployment.yaml
kube_ops_view/: backoff.py  kubernetes.py  stores.py
