[tool]
[tool.poetry]
name = "kube-ops-view"
version = "2020.0.dev1"
description = "Kubernetes Operational View - read-only system dashboard for multiple K8s clusters"
authors = ["Henning Jacobs <henning@jacobs1.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = "*"
flask = "*"
flask-dance = "*"
gevent = "*"
json-delta = ">=2.0"
pykube-ng = "*"
redlock-py = "*"
requests = "*"
# for Python 3.10 support
urllib3 = ">=1.26"
stups-tokens = ">=1.1.19"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pre-commit = "^2.9.2"
